# f24-group5

./: README.md  antiquated.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  wow.env
my-app/: .gitignore  package-lock.json  package.json
my-app/src/: About.jsx  App.css  App.jsx  DrawerAppBar.jsx  GetStarted.jsx  RecordingPage.jsx  ResultsPage.jsx  inputSpeech.jsx  main.jsx
